refactor : data.sql, 기존 api 수정 (#170)